{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 51,
  "lineage": "ff735d1e-dfc0-212f-c38f-2a2719af63c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ff26af8dd89c1f49",
            "domain": "vpc",
            "id": "eipalloc-0ff75cb69ec159cda",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c810f6548854abcd",
            "private_dns": "ip-10-0-0-192.ec2.internal",
            "private_ip": "10.0.0.192",
            "public_dns": "ec2-44-198-100-113.compute-1.amazonaws.com",
            "public_ip": "44.198.100.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1"
            },
            "tags_all": {
              "Name": "EIP 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e06f2e9ee2c89cf",
            "domain": "vpc",
            "id": "eipalloc-05beb28ea4b460b17",
            "network_border_group": "us-east-1",
            "network_interface": "eni-019662d4cf81042b0",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-35-174-120-220.compute-1.amazonaws.com",
            "public_ip": "35.174.120.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 2"
            },
            "tags_all": {
              "Name": "EIP 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:internet-gateway/igw-0fa477e6db95976fb",
            "id": "igw-0fa477e6db95976fb",
            "owner_id": "598377268313",
            "tags": {
              "Name": "Test IGW"
            },
            "tags_all": {
              "Name": "Test IGW"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff75cb69ec159cda",
            "connectivity_type": "public",
            "id": "nat-0f4587b9ed4adb9e3",
            "network_interface_id": "eni-0c810f6548854abcd",
            "private_ip": "10.0.0.192",
            "public_ip": "44.198.100.113",
            "subnet_id": "subnet-0257f899b773c2f2c",
            "tags": {
              "Name": "NatGateway public subnet 1"
            },
            "tags_all": {
              "Name": "NatGateway public subnet 1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05beb28ea4b460b17",
            "connectivity_type": "public",
            "id": "nat-040888252cc4ff777",
            "network_interface_id": "eni-019662d4cf81042b0",
            "private_ip": "10.0.1.174",
            "public_ip": "35.174.120.220",
            "subnet_id": "subnet-06f33424b065ccb86",
            "tags": {
              "Name": "NatGateway public subnet 2"
            },
            "tags_all": {
              "Name": "NatGateway public subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:route-table/rtb-065dbdae83de25cca",
            "id": "rtb-065dbdae83de25cca",
            "owner_id": "598377268313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4587b9ed4adb9e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 1"
            },
            "tags_all": {
              "Name": "Private route table 1"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:route-table/rtb-0b90c4058e00419d2",
            "id": "rtb-0b90c4058e00419d2",
            "owner_id": "598377268313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-040888252cc4ff777",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 2"
            },
            "tags_all": {
              "Name": "Private route table 2"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gateway-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:route-table/rtb-08a719bcd161aef95",
            "id": "rtb-08a719bcd161aef95",
            "owner_id": "598377268313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa477e6db95976fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4b05955b61787fd",
            "route_table_id": "rtb-065dbdae83de25cca",
            "subnet_id": "subnet-0558d54b0bf1b52d0"
          },
          "dependencies": [
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706c40277bd4be00",
            "route_table_id": "rtb-0b90c4058e00419d2",
            "subnet_id": "subnet-08af3afa76f3a11a9"
          },
          "dependencies": [
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a98ccbf6d3424818",
            "route_table_id": "rtb-065dbdae83de25cca",
            "subnet_id": "subnet-0709234c651d3137d"
          },
          "dependencies": [
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-4-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0146b168b2dac2429",
            "route_table_id": "rtb-0b90c4058e00419d2",
            "subnet_id": "subnet-0fb7689295eee3fcf"
          },
          "dependencies": [
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-4",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc",
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc16388b57ad3000",
            "route_table_id": "rtb-08a719bcd161aef95",
            "subnet_id": "subnet-0257f899b773c2f2c"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c8b14e8fe685a3f",
            "route_table_id": "rtb-08a719bcd161aef95",
            "subnet_id": "subnet-06f33424b065ccb86"
          },
          "dependencies": [
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc",
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:security-group/sg-08c2e82ab6e032504",
            "description": "Enable HTTP/HTTPS access port 80/443 ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c2e82ab6e032504",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "598377268313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:security-group/sg-0548a001c6bf0260a",
            "description": "ENable Aurora database port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0548a001c6bf0260a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Aurora Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b03d14106a62ef10"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database Security Group",
            "name_prefix": "",
            "owner_id": "598377268313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security Group"
            },
            "tags_all": {
              "Name": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.weserver-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:security-group/sg-08c388d38da8455ed",
            "description": "Enable SSH Access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c388d38da8455ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "598377268313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "weserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:security-group/sg-0b03d14106a62ef10",
            "description": "Enable HTTP/HTTPS access port 80/443 via ALB and SSH ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b03d14106a62ef10",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c2e82ab6e032504"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c2e82ab6e032504"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c388d38da8455ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver Security Group",
            "name_prefix": "",
            "owner_id": "598377268313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server Security Group"
            },
            "tags_all": {
              "Name": "Web Server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-0558d54b0bf1b52d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0558d54b0bf1b52d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Private subnet 1 | App Tier"
            },
            "tags_all": {
              "Name": "Private subnet 1 | App Tier"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-08af3afa76f3a11a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08af3afa76f3a11a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Private subnet 2 | App Tier"
            },
            "tags_all": {
              "Name": "Private subnet 2 | App Tier"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-0709234c651d3137d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0709234c651d3137d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Private subnet 3 | Database Tier"
            },
            "tags_all": {
              "Name": "Private subnet 3 | Database Tier"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-0fb7689295eee3fcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0fb7689295eee3fcf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Private subnet 4 | Database Tier"
            },
            "tags_all": {
              "Name": "Private subnet 4 | Database Tier"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-0257f899b773c2f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0257f899b773c2f2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:subnet/subnet-06f33424b065ccb86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06f33424b065ccb86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598377268313",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-04c7a3adf1209d3d2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598377268313:vpc/vpc-04c7a3adf1209d3d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efa7e9dca24d8d42",
            "default_route_table_id": "rtb-074ae2c51d88bf466",
            "default_security_group_id": "sg-0a859d0e02a59e070",
            "dhcp_options_id": "dopt-0ecd6458ce356aca0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c7a3adf1209d3d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074ae2c51d88bf466",
            "owner_id": "598377268313",
            "tags": {
              "Name": "Test VPC"
            },
            "tags_all": {
              "Name": "Test VPC"
            }
          }
        }
      ]
    }
  ]
}